--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .gradle
-build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
