--- a/glass/build.gradle
+++ b/glass/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.example.facecard"
+        applicationId "edu.gatech.cc.cs7470.facecard"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
