--- a/glass/src/main/AndroidManifest.xml
+++ b/glass/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.facecard" >
+    package="edu.gatech.cc.cs7470.facecard" >
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name="com.example.facecard.FaceCardService"
+            android:name="edu.gatech.cc.cs7470.facecard.FaceCardMainService"
             android:icon="@drawable/ic_glass_logo"
-            android:label="@string/title_activity_face_card_service" >
+            android:label="@string/title_activity_face_card_main_service" >
             <intent-filter>
                 <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
             </intent-filter>
@@ -21,7 +21,7 @@
         </service>
 
         <activity
-            android:name="com.example.facecard.LiveCardMenuActivity"
+            android:name="edu.gatech.cc.cs7470.facecard.LiveCardMenuActivity"
             android:theme="@style/MenuTheme" />
     </application>
 
