--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.example.facecard"
-        minSdkVersion 16
+        applicationId "edu.gatech.cc.cs7470.facecard"
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -27,4 +27,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
