--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,9 @@
             android:name=".View.activities.MainActivity"
             android:label="@string/app_name" >
         </activity>
+        <receiver
+            android:process=":remote" android:name=".Controller.receivers.BluetoothReceiver">
+        </receiver>
     </application>
 
 </manifest>
