bluetooth connection working

--- a/glass/src/main/AndroidManifest.xml
+++ b/glass/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </service>
 
         <activity
-            android:name="edu.gatech.cc.cs7470.facecard.LiveCardMenuActivity"
+            android:name="edu.gatech.cc.cs7470.facecard.FaceCardMainActivity"
             android:theme="@style/MenuTheme">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
