--- a/glass/src/main/AndroidManifest.xml
+++ b/glass/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <service
             android:name="edu.gatech.cc.cs7470.facecard.FaceCardMainService"
             android:icon="@drawable/ic_glass_logo"
@@ -26,12 +26,20 @@
         </service>
 
         <activity
-            android:name="edu.gatech.cc.cs7470.facecard.LiveCardMenuActivity"
+            android:name="edu.gatech.cc.cs7470.facecard.MainActivity"
             android:theme="@style/MenuTheme">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.gatech.cc.cs7470.facecard.FourCardActivity"
+            android:theme="@style/MenuTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
