--- a/glass/src/main/AndroidManifest.xml
+++ b/glass/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </service>
 
         <activity
-            android:name=".View.FaceCardMainActivity"
+            android:name=".FaceCardMainActivity"
             android:theme="@style/MenuTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
