--- a/glass/src/main/AndroidManifest.xml
+++ b/glass/src/main/AndroidManifest.xml
@@ -26,12 +26,20 @@
         </service>
 
         <activity
-            android:name=".FaceCardMainActivity"
+            android:name=".View.CardScrollActivity"
             android:theme="@style/MenuTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".View.FourCardsActivity"
+            android:theme="@style/MenuTheme">
+        </activity>
+        <activity
+            android:name=".View.EightCardsActivity"
+            android:theme="@style/MenuTheme">
         </activity>
     </application>
 
